Modify name for displaying

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png">
 
-    <title>socialapp</title>
+    <title>Zineround</title>
     <link rel="manifest" href="manifest.json">
 
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
